tweaked the placeholder stylesheet to avoid layout issues

--- a/stylesheets/screen.sass
+++ b/stylesheets/screen.sass
@@ -28,20 +28,23 @@
 
 // Your own styles go here.
 
-body
+
+.newproject, header, footer
   margin: 0 auto
   min-width: 300px
   max-width: 600px
-  padding: 15px 150px
+  padding: 0 150px
   
 header
   color: #999
   text-transform: uppercase
+  padding-top: 15px
 
 footer
   color: #ccc
   font-weight: bold
   text-align: right
+  padding-bottom: 15px
 
 
 // These imports should remain below the bulk of the stylesheet so they can override correctly.
